[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/OBJECTS/Enemy1Spawner.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="spawn_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawn_area"]
visible = false
shape = SubResource( 1 )
[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
